[tool.poetry]
name = "esquite"
version = "0.1.0"
description = "Framework para corpus paralelos | Framework for parallel corpora"
authors = ["Diego B. <dbarriga@ciencias.unam.mx>", "Comunidad Elotl <contacto@elotl.mx>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.2.17"
django-google-analytics-app = "^5.0.3"
djangorestframework = "^3.13.1"
elasticsearch = "^7.16.3"
GitPython = "^3.1.26"
requests = "^2.27.1"
click = "^8.0.3"
PyYAML = "^6.0"
drf-yasg = "^1.20.0"

[tool.poetry.dev-dependencies]
Sphinx = "^4.4.0"
sphinxcontrib-redoc = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
