[project]
name = "esquite"
version = "1.0.0"
description = "Framework para corpus paralelos | Framework for parallel corpora"
readme = "README.md"
authors = ["Diego B. <dbarriga@ciencias.unam.mx>", "Comunidad Elotl <contacto@elotl.mx>"]
license = "MPL-2.0"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "click>=8.3.1",
    "django>=5.2,<6.0",
    "djangorestframework>=3.16.1",
    "elasticsearch>=9.3.0",
    "gitpython>=3.1.46",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
docs = [
    "sphinx>=9.1.0",
    "sphinxcontrib-redoc>=1.6.0",
]
